//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class Model
    {
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2214:DoNotCallOverridableMethodsInConstructors")]
        public Model()
        {
            this.Cars = new HashSet<Car>();
        }
    
        public System.Guid RowId { get; set; }
        public string Name { get; set; }
        public System.Guid BrandId { get; set; }
        public string Description { get; set; }
        public Nullable<int> MaxSpeed { get; set; }
        public Nullable<double> FuelConsumption { get; set; }
        public string FuelType { get; set; }
        public Nullable<int> HorsePower { get; set; }
        public Nullable<double> EngineVolume { get; set; }
        public Nullable<double> Acceleration { get; set; }
    
        public virtual Brand Brand { get; set; }
        [System.Diagnostics.CodeAnalysis.SuppressMessage("Microsoft.Usage", "CA2227:CollectionPropertiesShouldBeReadOnly")]
        public virtual ICollection<Car> Cars { get; set; }
    }
}
