//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class Part
    {
        public System.Guid RowId { get; set; }
        public string Name { get; set; }
        public string Article { get; set; }
        public System.Guid PartManufacturerId { get; set; }
        public Nullable<System.Guid> ColorId { get; set; }
        public Nullable<System.Guid> StatusId { get; set; }
        public string Description { get; set; }
    
        public virtual Color Color { get; set; }
        public virtual PartManufacturer PartManufacturer { get; set; }
        public virtual Status Status { get; set; }
    }
}
